ocp/00_lab/yaml/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v1
  annotations:
    app.openshift.io/vcs-ref: master
    app.openshift.io/vcs-uri: "https://gitlab.com/ocp-demo/frontend-js"
  labels:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: frontend
    app.kubernetes.io/name: nodejs
    app.kubernetes.io/part-of: App-X
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: "18"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      version: v1
  template:
    metadata:
      labels:
        app: frontend
        version: v1
        maistra.io/expose-route: "true"
    spec:
      containers:
        - name: frontend
          image: quay.io/voravitl/frontend-js:v1
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "0.1"
              memory: 60Mi
            limits:
              cpu: "0.2"
              memory: 100Mi
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop: ["ALL"]
            readOnlyRootFilesystem: true
          ports:
            - containerPort: 8080
      terminationGracePeriodSeconds: 10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v2
  annotations:
    app.openshift.io/vcs-ref: master
    app.openshift.io/vcs-uri: "https://gitlab.com/ocp-demo/frontend-js"
  labels:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: frontend
    app.kubernetes.io/name: nodejs
    app.kubernetes.io/part-of: App-X
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: "18"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      version: v2
  template:
    metadata:
      labels:
        app: frontend
        version: v2
        maistra.io/expose-route: "true"
    spec:
      containers:
        - name: frontend
          image: quay.io/voravitl/frontend-js:v1
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "0.1"
              memory: 60Mi
            limits:
              cpu: "0.2"
              memory: 100Mi
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop: ["ALL"]
            readOnlyRootFilesystem: true
      terminationGracePeriodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  ports:
    - port: 8080
      name: http
      targetPort: 8080
  selector:
    app: frontend
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend
spec:
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: frontend
    weight: 100
  wildcardPolicy: None
